typescript/checker/tests/conformance/async/es2017/await_unaryExpression_es2017_3.ts.stderr
error: TS2406
 --> $DIR/tests/conformance/async/es2017/await_unaryExpression_es2017_3.ts:4:7
  |
4 |     ++await 42; // Error
  |       ^^^^^^^^

error: TS2406
 --> $DIR/tests/conformance/async/es2017/await_unaryExpression_es2017_3.ts:8:7
  |
8 |     --await 42; // Error
  |       ^^^^^^^^

